// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";
package geist.meta.v1alpha;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "geist/rpc/pagination.proto";

// Identity provider types
enum IdentityProvider {
    IDENTITY_PROVIDER_UNSPECIFIED = 0;
    IDENTITY_PROVIDER_GOOGLE = 1;
    IDENTITY_PROVIDER_GITHUB = 2;
    IDENTITY_PROVIDER_TWITTER = 3;
    IDENTITY_PROVIDER_DISCORD = 4;
    IDENTITY_PROVIDER_APPLE = 5;
    IDENTITY_PROVIDER_MICROSOFT = 6;
    IDENTITY_PROVIDER_EMAIL = 7;  // Email/password authentication
}

// Identity represents a linked authentication provider
message Identity {
    string uid = 1 [(buf.validate.field).string.uuid = true];
    string user_uid = 2 [(buf.validate.field).string.uuid = true];
    IdentityProvider provider = 3;
    string provider_user_id = 4;  // Provider's unique ID
    string provider_email = 5;
    string provider_username = 6;
    string provider_avatar_url = 7;
    bool is_primary = 8;
    bool verified = 9;
    google.protobuf.Timestamp create_time = 10;
    google.protobuf.Timestamp update_time = 11;
    google.protobuf.Timestamp last_used_at = 12;
    // Note: Access tokens are never returned in API responses
}

// IdentityService manages user identity providers
service IdentityService {
    rpc GetIdentity(IdentityRequest) returns (IdentityResponse);
    rpc ListIdentities(ListIdentitiesRequest) returns (IdentityResponse);
    rpc LinkIdentity(LinkIdentityRequest) returns (IdentityResponse);
    rpc UnlinkIdentity(UnlinkIdentityRequest) returns (IdentityResponse);
    rpc SetPrimaryIdentity(SetPrimaryIdentityRequest) returns (IdentityResponse);
}

message IdentityRequest {
    oneof params {
        string uid = 1 [(buf.validate.field).string.uuid = true];
        string user_uid = 2 [(buf.validate.field).string.uuid = true];
        string provider_user_id = 3;
    }
    IdentityProvider provider = 4;
}

message IdentityResponse {
    repeated Identity identities = 1;
    geist.rpc.Pagination page = 2;
}

message ListIdentitiesRequest {
    string user_uid = 1 [(buf.validate.field).string.uuid = true];
    geist.rpc.Pagination page = 2;
}

message LinkIdentityRequest {
    IdentityProvider provider = 1;
    string provider_user_id = 2;
    string provider_email = 3;
    string provider_username = 4;
    string provider_avatar_url = 5;
    bool verified = 6;
    // OAuth tokens (encrypted before storage)
    string access_token = 7;
    string refresh_token = 8;
    google.protobuf.Timestamp token_expires_at = 9;
    // Optional: link to existing user by UID
    string user_uid = 10;
}

message UnlinkIdentityRequest {
    string identity_uid = 1 [(buf.validate.field).string.uuid = true];
    string user_uid = 2 [(buf.validate.field).string.uuid = true];
}

message SetPrimaryIdentityRequest {
    string identity_uid = 1 [(buf.validate.field).string.uuid = true];
    string user_uid = 2 [(buf.validate.field).string.uuid = true];
}

